* Added Shared_Ptr class. Note that a "shared_ptr" will be available for the
   updated C++ standard. It is already available with some modern compilers,
   and also for users of the Boost library. The "Shared_Ptr" class is intended
   as an alternative for those users who would like to use a "shared_ptr", but
   don't have access to one yet.
* Vectors are now used to replace all dynamically allocated arrays.       
            

Changes in detail
-----------------
Added CAnimation
Added CComboBox  
Added CComboBoxEx
Added CProgressbar 
Added CResizer 
Added CScrollbar 
Added CSlider 
Added CSpinButton
Added Shared_Ptr
Added CWinThread 
Updated CSocket to support IPv6
Added CPropertySheet::SetIcon
Added CRebar::SizeToRect
Added CSocket::IsIPV6Supported
Added CSocket::FreeAddrInfo
Added CSocket::GetAddrInfo
Added CSocket::GetLastError
Added CToolbar::AddButtons
Added CToolbar::AddString
Added CToolbar::AutoSize
Added CToolbar::CheckButton 
Added CToolbar::DeleteButton   
Added CToolbar::GetButton
Added CToolbar::GetButtonSize
Added CToolbar::GetButtonText
Added CToolbar::GetDisabledImageList
Added CToolbar::GetHotItem
Added CToolbar::GetImageList
Added CToolbar::GetPadding
Added CToolbar::GetRect
Added CToolbar::GetRows
Added CToolbar::GetTextRows
Added CToolbar::GetToolTips
Added CToolbar::HideButton
Added CToolbar::Indeterminate
Added CToolbar::InsertButton
Added CToolbar::IsButtonHidden
Added CToolbar::IsButtonHighlighted
Added CToolbar::IsButtonIndeterminate
Added CToolbar::IsButtonPressed
Added CToolbar::MapAccelerator
Added CToolbar::MarkButton
Added CToolbar::MoveButton
Added CToolbar::PressButton
Added CToolbar::SaveRestore
Added CToolbar::SetDisabledImageList
Added CToolbar::SetDrawTextFlags
Added CToolbar::SetExtendedStyle
Added CToolbar::SetHotImageList
Added CToolbar::SetHotItem
Added CToolbar::SetImageList
Added CToolbar::SetIndent
Added CToolbar::SetMaxTextRows
Added CToolbar::SetPadding
Added CToolbar::SetToolTips
Added CWinException::what