@@ -195,10 +195,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\MyThread.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\src\StdAfx.cpp"
 				>
 				<FileConfiguration
@@ -234,10 +230,6 @@
 			</File>
 			<File
 				RelativePath="..\src\Mainfrm.h"
-				>
-			</File>
-			<File
-				RelativePath="..\src\MyThread.h"
 				>
 			</File>
 			<File
