@@ -193,10 +193,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\src\MyThread.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\src\StdAfx.cpp"
 				>
 				<FileConfiguration
@@ -232,10 +228,6 @@
 			</File>
 			<File
 				RelativePath="..\src\Mainfrm.h"
-				>
-			</File>
-			<File
-				RelativePath="..\src\MyThread.h"
 				>
 			</File>
 			<File
