@@ -8,7 +8,7 @@
 //       for Dev-C++ you will need the DirecX v9.0c DevPak
 
 #include <d3d9.h>  // See the note above
-
+//#include "MainFrm.h"
 
 // A structure for our custom vertex type
 struct CUSTOMVERTEX
@@ -20,15 +20,20 @@ struct CUSTOMVERTEX
 // Our custom FVF, which describes our custom vertex structure
 //#define D3DFVF_CUSTOMVERTEX (D3DFVF_XYZ|D3DFVF_DIFFUSE)
 
-class CView : public CWnd
+class CView : public CWnd, public CThread
 {
 public:
-	CView() : m_pD3D(NULL), m_pd3dDevice(NULL), m_pVB(NULL) {}
+	CView() : m_pD3D(NULL), m_pd3dDevice(NULL), m_pVB(NULL), m_hwndParent(NULL) {}
 	virtual ~CView();
 	virtual HRESULT InitD3D(HWND hWnd);
 	virtual HRESULT InitGeometry();
 	virtual void Render();
 	virtual VOID SetupMatrices();
+
+	virtual HWND Create(HWND hWndParent = 0);
+	virtual void StartThread(HWND hwndParent);
+	virtual BOOL InitInstance();
+	virtual int MessageLoop();
 
 protected:
 	virtual	void OnCreate();
@@ -39,6 +44,7 @@ private:
 	LPDIRECT3D9       m_pD3D;			// Used to create the D3DDevice
 	LPDIRECT3DDEVICE9 m_pd3dDevice;		// Our rendering device
 	LPDIRECT3DVERTEXBUFFER9 m_pVB;      // Buffer to hold vertices
+	HWND m_hwndParent;
 };
 
 
